{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 88,
  "lineage": "8ed54c39-03cc-1fc8-d23f-b1b33fc3363c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfweb_profiles_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkInterfaces/auto_web_profiles_NIC",
            "internal_domain_name_suffix": "pv522uwxim4ebkmv3mqxtusrae.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "auto_web_profiles_config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/publicIPAddresses/autowebProfilesPublicIP",
                "subnet_id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/virtualNetworks/auto_web_profiles_vnet/subnets/auto_web_profiles_subnet"
              }
            ],
            "location": "australiaeast",
            "name": "auto_web_profiles_NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "auto_web_profiles_rg",
            "tags": {
              "environment": "web_profiles"
            }
          },
          "dependencies": [
            "azurerm_public_ip.tfweb_profiles_publicip",
            "azurerm_resource_group.tfweb_profiles_rg",
            "azurerm_subnet.tfweb_profiles_subnet",
            "azurerm_virtual_network.tfweb_profiles_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_nic_nsg_attch_web_profiles",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkInterfaces/auto_web_profiles_NIC|/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkSecurityGroups/auto_web_profiles_nsg",
            "network_interface_id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkInterfaces/auto_web_profiles_NIC",
            "network_security_group_id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkSecurityGroups/auto_web_profiles_nsg"
          },
          "dependencies": [
            "azurerm_network_interface.tfweb_profiles_nic",
            "azurerm_network_security_group.tfweb_profiles_nsg",
            "azurerm_public_ip.tfweb_profiles_publicip",
            "azurerm_resource_group.tfweb_profiles_rg",
            "azurerm_subnet.tfweb_profiles_subnet",
            "azurerm_virtual_network.tfweb_profiles_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfweb_profiles_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkSecurityGroups/auto_web_profiles_nsg",
            "location": "australiaeast",
            "name": "auto_web_profiles_nsg",
            "resource_group_name": "auto_web_profiles_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "web_profiles"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tfweb_profiles_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "testrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/networkSecurityGroups/auto_web_profiles_nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "auto_web_profiles_nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "auto_web_profiles_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfweb_profiles_nsg",
            "azurerm_resource_group.tfweb_profiles_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfweb_profiles_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/publicIPAddresses/autowebProfilesPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "autowebProfilesPublicIP",
            "resource_group_name": "auto_web_profiles_rg",
            "sku": "Basic",
            "tags": {
              "environment": "web_profiles"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tfweb_profiles_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfweb_profiles_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/virtualNetworks/auto_web_profiles_vnet/subnets/auto_web_profiles_subnet",
            "name": "auto_web_profiles_subnet",
            "resource_group_name": "auto_web_profiles_rg",
            "virtual_network_name": "auto_web_profiles_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tfweb_profiles_rg",
            "azurerm_virtual_network.tfweb_profiles_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfweb_profiles_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "52ce7f7d-43d7-403c-a995-eb2179d25104",
            "id": "/subscriptions/37b7da11-3ed9-46bd-9086-1baee3e171ba/resourceGroups/auto_web_profiles_rg/providers/Microsoft.Network/virtualNetworks/auto_web_profiles_vnet",
            "location": "australiaeast",
            "name": "auto_web_profiles_vnet",
            "resource_group_name": "auto_web_profiles_rg",
            "tags": {
              "environment": "web_profiles"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.tfweb_profiles_rg"
          ]
        }
      ]
    }
  ]
}